--- a/mystore/src/app/components/check-out/check-out.component.html
+++ b/mystore/src/app/components/check-out/check-out.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-        <form>
+        <form [formGroup]='checkoutForm'>
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" id="name" class="form-control" />
