--- a/mystore/src/app/components/navbar/navbar.component.html
+++ b/mystore/src/app/components/navbar/navbar.component.html
@@ -27,8 +27,8 @@
                     </a>
                     <div ngbDropdownMenu aria-labelledby="dropdown01">
                         <a routerLink="/my-orders" class="dropdown-item">My Orders</a>
-                        <a class="dropdown-item" routerLink='/manage-products'>Manage Products</a>
-                        <a class="dropdown-item" routerLink='/manage-orders'>Manage Orders</a>
+                        <a class="dropdown-item" routerLink='admin/manage-products'>Manage Products</a>
+                        <a class="dropdown-item" routerLink='admin/manage-orders'>Manage Orders</a>
                         <a class="dropdown-item" routerLink=''>Logout</a>
                     </div>
                 </li>
