--- a/mystore/src/app/components/admin/manage-products/manage-products.component.html
+++ b/mystore/src/app/components/admin/manage-products/manage-products.component.html
@@ -14,15 +14,17 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Milk</td>
-            <td>$2.00</td>
-            <td>Dairy</td>
-            <td class="text-center">
-                <a class="btn btn-danger mr-2">
+        <tr *ngFor='let product of products'>
+            <td>{{product.title}}</td>
+            <td>{{product.price | currency}}</td>
+            <td>{{product.category}}</td>
+            <td>
+                <button [routerLink]="['admin/edit-product', product.id]" type="button" class="btn btn-success">
                     Edit
-                </a>
-                <button class="btn btn-danger" type="button">Delete</button>
+                </button>
+                <button (click)='removeProduct(product)' type="button" class="btn btn-danger">
+                    Delete
+                </button>
             </td>
         </tr>
     </tbody>
