--- a/mystore/src/app/components/products/products.component.html
+++ b/mystore/src/app/components/products/products.component.html
@@ -2,14 +2,13 @@
     <div class="col-md-3">
         <div class="sticky-top">
             <ul class="list-group">
-                <li class="list-group-item cursor-pointer active">
-                    All Categories
-                </li>
-                <li class="list-group-item cursor-pointer">
-                    Fruits
-                </li>
-                <li class="list-group-item cursor-pointer">
-                    Bread
+                <li
+                    [class.active]='category.isActive'
+                    class="list-group-item cursor-pointer"
+                    *ngFor='let category of categories'
+                    (click)='filterProducts(category)'
+                >
+                    {{ category.name }}
                 </li>
             </ul>
         </div>
