--- a/mystore/src/app/components/cart/cart.component.html
+++ b/mystore/src/app/components/cart/cart.component.html
@@ -44,7 +44,7 @@
     </tfoot>
 </table>
 <p>
-    <button class="btn btn-info mr-2">
+    <button routerLink='../checkout' class="btn btn-info mr-2">
         Checkout Cart
     </button>
     <button class="btn btn-danger">
