--- a/mystore/src/app/components/products-card/products-card.component.html
+++ b/mystore/src/app/components/products-card/products-card.component.html
@@ -1,19 +1,24 @@
 <div class="card">
-    <img class="card-img-top" src="https://dummyimage.com/600x400/000/fff" alt="Card image cap">
+    <img class="card-img-top" [src]="product.imageUrl" alt="Card image cap">
     <div class="card-body">
-        <h4 class="card-title">Milk</h4>
-        <h6 class="card-text">$12.00</h6>
+        <h4 class="card-title">{{ product.title }}</h4>
+        <h6 class="card-text"> {{ product.price | currency }}</h6>
     </div>
     <div class="card-footer">
         <div *ngIf="quantity" class="row no-gutters">
             <div class="col-3">
-                <button class="btn btn-secondary" type="button">+</button>
+                <button class="btn btn-secondary" (click)='addProduct(product)' type="button">+</button>
             </div>
             <div class="col-6 text-center items-count">
-                1 in cart
+                {{quantity}} in cart
             </div>
             <div class="col-3">
-                <button class="btn btn-secondary" type="button">-</button>
+                <button class="btn btn-secondary" (click)='removeProduct(product)' type="button">-</button>
+            </div>
+        </div>
+        <div *ngIf="!quantity" class="row no-gutters">
+            <div class="col-12">
+                <button class="btn btn-primary" (click)='addProduct(product)' type="button">Add to Cart</button>
             </div>
         </div>
     </div>
