--- a/mystore/src/app/components/products/products.component.html
+++ b/mystore/src/app/components/products/products.component.html
@@ -15,14 +15,8 @@
     </div>
     <div class="col-md-9">
         <div class="row">
-            <div class="col-lg-4 col-sm-6 col-12">
-                <app-products-card></app-products-card>
-            </div>
-            <div class="col-lg-4 col-sm-6 col-12">
-                <app-products-card></app-products-card>
-            </div>
-            <div class="col-lg-4 col-sm-6 col-12">
-                <app-products-card></app-products-card>
+            <div *ngFor='let product of products' class="col-lg-4 col-sm-6 col-12">
+                <app-products-card [product]='product'></app-products-card>
             </div>
         </div>
     </div>
